test/library/standard/CTypes/carray-void.good
carray-void.chpl:3: error: c_array element type cannot be 'void'
